fixed menu wrong transform issue, package creation page transforming overlaping issues

--- a/client/src/NavBar/menu.css
+++ b/client/src/NavBar/menu.css
@@ -13,10 +13,10 @@ border-color: #080808;
 
 .nav li{
      display: block;
-    font-size: 20px;
+    font-size: 1.7em;
     color: antiquewhite;
-    padding:5px;
-    margin: 5px;
+    /*padding:5px;
+    margin: 5px;*/
 }
 
 
@@ -27,4 +27,8 @@ border-color: #080808;
 
 .nopad {
   padding-left:0;padding-right:0;
+}
+
+.navbar-brand {
+  padding:15px 15px 15px 30px; display: block; float: left;
 }
